# smart-context

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  main.py  pyproject.toml  test_mcp_tools.py  ts_explore_ts.py  ts_explore_web.py
.agents/rules/: 01-autonomy-and-security.md
.agents/skills/tdd-execution/: SKILL.md
.agents/skills/ui-iteration/: SKILL.md
.agents/workflows/: review-pr.md
.claude/: settings.json
.claude/hooks/: session-end.sh  startup.sh
docs/: INSTALLATION.md  PRD_Context_Server.md
docs/context/: VALIDATION_CHECKLIST.md  backlog.md  decisions.md  journal.md  state.md
src/: security.py
src/database/: connection.py  models.py
src/database/repositories/: __init__.py  base.py  dependency_repo.py  metadata_repo.py  observation_repo.py  symbol_repo.py
src/indexer/: dependency_analyzer.py  incremental.py  parser.py  simple_parser.py  ts_parser.py
src/mcp_server/: server.py
src/mcp_server/tools/: add_observation.py  get_project_summary.py  get_symbol_context.py
tests/: test_enterprise.py  test_omni.py  test_sys.py  test_ts_parser.py  test_web.py
