[project]
name = "mcp-context"
version = "0.1.0"
description = "Intelligent code context server using MCP protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "questionary>=2.1.1",
    "sqlalchemy>=2.0.48",
    "tree-sitter>=0.25.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]

[project.scripts]
mcp-context = "main:main"
mcp-context-server = "src.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
